# max-dist-diff-extended

./: .gitignore  CMakeLists.txt  README.md
dat/: App_UAO.ipynb
debug_apps/: debug.py
include/Contour/: IncrementalContourSerial.hpp
include/MaxDist/: ExactMaxDistComputer.hpp  MaxDistComputerOpt.hpp  MaxDistComputerOpt2.hpp  MaxDistComputerOpt3.hpp  MaxDistComputerOptGPU.hpp  MaxDistComputerOptParallel.hpp  edt_diff.hpp  edt_diff2.hpp  edt_diff3.hpp
include/Morphology/: ErosionGPU.hpp  ErosionParallel.hpp  ErosionSerial.hpp
include/Vis/EDTInspector/: ImageViewer.hpp  Textute.hpp
include/contour/: IncrementalContourSerial.hpp
include/morphology/: Adjacency.hpp  ErosionSerial.hpp
runtime-analysis/: gen_csv2.py  run_gen_csv2_diff_max_dist.sh  run_gen_csv2_diff_max_dist_opt2.sh  run_gen_csv2_diff_max_dist_opt3.sh  run_gen_csv2_exact_edt.sh  run_gen_csv2_non_diff.sh
runtime-analysis/csv/: runtime_test.csv
runtime-analysis/csv2/: group_data.py  mean_runtime_120x68.csv  mean_runtime_1920x1080.csv  mean_runtime_240x135.csv  mean_runtime_480x270.csv  mean_runtime_960x540.csv
runtime-analysis/csv2/diff_max_dist_opt2/120x68/: runtime_1.csv
runtime-analysis/csv2/diff_max_dist_opt2/1920x1080/: runtime_3.csv
runtime-analysis/csv2/diff_max_dist_opt2/240x135/: runtime_2.csv
runtime-analysis/csv2/diff_max_dist_opt2/480x270/: runtime_1.csv  runtime_2.csv  runtime_3.csv
runtime-analysis/csv2/diff_max_dist_opt2/960x540/: runtime_1.csv  runtime_3.csv
runtime-analysis/csv2/diff_max_dist_opt3/120x68/: runtime_1.csv
runtime-analysis/csv2/diff_max_dist_opt3/1920x1080/: runtime_2.csv
runtime-analysis/csv2/diff_max_dist_opt3/240x135/: runtime_1.csv
runtime-analysis/csv2/diff_max_dist_opt3/480x270/: runtime_1.csv  runtime_3.csv
runtime-analysis/csv2/diff_max_dist_opt3/960x540/: runtime_3.csv
runtime-analysis/csv2/exact_edt/120x68/: runtime_1.csv
runtime-analysis/csv2/exact_edt/1920x1080/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv2/exact_edt/240x135/: runtime_1.csv  runtime_3.csv
runtime-analysis/csv2/exact_edt/480x270/: runtime_2.csv
runtime-analysis/csv2/exact_edt/960x540/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv2/max_diff/1920x1080/: runtime_2.csv
runtime-analysis/csv2/max_diff/240x135/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv2/max_diff/480x270/: runtime_3.csv
runtime-analysis/csv2/max_diff/960x540/: runtime_1.csv  runtime_2.csv
runtime-analysis/csv2/non_diff/120x68/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv2/non_diff/1920x1080/: runtime_3.csv
runtime-analysis/csv2/non_diff/240x135/: runtime_2.csv
runtime-analysis/csv2/non_diff/480x270/: runtime_2.csv
runtime-analysis/csv2/non_diff/960x540/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv3/: group_data.py  mean_runtime_120x68.csv  mean_runtime_1920x1080.csv  mean_runtime_240x135.csv  mean_runtime_480x270.csv  mean_runtime_960x540.csv
runtime-analysis/csv3/diff_max_dist_opt2/120x68/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv3/diff_max_dist_opt2/1920x1080/: runtime_1.csv  runtime_2.csv
runtime-analysis/csv3/diff_max_dist_opt2/240x135/: runtime_1.csv  runtime_3.csv
runtime-analysis/csv3/diff_max_dist_opt2/960x540/: runtime_2.csv
runtime-analysis/csv3/diff_max_dist_opt3/: runtime_1.csv
runtime-analysis/csv3/diff_max_dist_opt3/120x68/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv3/diff_max_dist_opt3/1920x1080/: runtime_1.csv  runtime_3.csv
runtime-analysis/csv3/diff_max_dist_opt3/240x135/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv3/diff_max_dist_opt3/480x270/: runtime_2.csv
runtime-analysis/csv3/diff_max_dist_opt3/960x540/: runtime_1.csv  runtime_2.csv
runtime-analysis/csv3/exact_edt/120x68/: runtime_2.csv  runtime_3.csv
runtime-analysis/csv3/exact_edt/1920x1080/: runtime_1.csv
runtime-analysis/csv3/exact_edt/240x135/: runtime_2.csv
runtime-analysis/csv3/exact_edt/480x270/: runtime_1.csv  runtime_3.csv
runtime-analysis/csv3/exact_edt/960x540/: runtime_1.csv
runtime-analysis/csv3/max_diff/120x68/: runtime_1.csv  runtime_2.csv  runtime_3.csv
runtime-analysis/csv3/max_diff/1920x1080/: runtime_1.csv  runtime_3.csv
runtime-analysis/csv3/max_diff/240x135/: runtime_1.csv
runtime-analysis/csv3/max_diff/480x270/: runtime_1.csv  runtime_2.csv
runtime-analysis/csv3/max_diff/960x540/: runtime_3.csv
runtime-analysis/csv3/non_diff/: runtime_1.csv  runtime_2.csv
runtime-analysis/csv3/non_diff/120x68/: runtime_1.csv
runtime-analysis/csv3/non_diff/1920x1080/: runtime_1.csv  runtime_2.csv
runtime-analysis/csv3/non_diff/240x135/: runtime_1.csv  runtime_3.csv
runtime-analysis/csv3/test/: runtime
src/: extinction_filter_max_dist.cpp  test_temp.cpp
src/Apps/Checking/: check_diff_edt_opt.cpp  check_diff_edt_opt2.cpp  check_diff_edt_opt3.cpp  check_diff_edt_opt_gpu.cpp  check_diff_edt_opt_parallel.cpp  check_exact_edt.cpp  check_implementations.cpp
src/Apps/Displays/: basic_attr_disp.cpp  max_dist_attr_disp.cpp
src/Apps/EDTInspector/: Texture.cpp  main.cpp
src/Apps/Filters/: direct_filter.cpp  extinction_filter_area.cpp  extinction_filter_height.cpp  extinction_filter_inertia.cpp  extinction_filter_max_dist.cpp  extinction_filter_volume.cpp  ultimate_maxDist_open.cpp
src/Apps/Misc/: dtmt.cpp  dtmt_diff.cpp
src/Apps/Runtime/: diff_max_dist_opt2_runtime.cpp  diff_max_dist_opt3_runtime.cpp  diff_max_dist_runtime.cpp  exact_max_dist_runtime.cpp  non_diff_max_dist_runtime.cpp
src/Attributes/: BasicAttributeComputer.cpp  InertiaComputer.cpp
src/Contour/: IncrementalContourSerial.cpp
src/MaxDist/: ExactMaxDistComputer.cpp  MaxDistComputer.cpp  MaxDistComputerOpt.cpp  MaxDistComputerOpt2.cpp  MaxDistComputerOpt3.cpp  MaxDistComputerOptGPU.cpp  MaxDistComputerOptParallel.cpp  NonDiffMaxDistComputer.cpp  edt_diff.cpp  edt_diff2.cpp  edt_diff3.cpp
src/Morphology/: Adjacency.cpp  ErosionGPU.cu  ErosionParallel.cpp  ErosionSerial.cpp
src/Python/: pythonApps.cpp
src/contour/: IncrementalContourSerial.cpp
src/morphology/: Adjacency.cpp  ErosionSerial.cpp
(+3 files in other folders)
